# node-cron

./: imprime.py  main.py  master_of_scrapers.py  pyproject.toml  requirements.txt
classes/conf/: config.ini
cron_scraper/classes/: __init__.py  dao.py  mongo_conn.py  offer_consts.py
cron_scraper/scrapers/: infojob_scraper.py  talent.py  tecno_empleo.py  wearehiring.py
cron_scraper/scrapers/utils/: common.py  wait.py
scrapers/: infoempleo.py
src/: index.ts
