[tool.poetry]
name = "railway-python-cron-job"
version = "0.1.0"
description = "This creates a cron job in a server"
authors = ["Alfredo Marquina Meseguer <alfmarmes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
